added db conn and dao
