# api/swagger/swagger.yaml
@@ -4,7 +4,7 @@ info:
   title: Game Editor API
   description: This API describes representing objects with GeoJson from PostGIS database.
 # during dev, should point to your local machine
-host: 127.0.0.1:10010
+host: game.iamborsch.ru
 # basePath prefixes all resource paths 
 basePath: /api/v1
 # 
@@ -23,22 +23,23 @@ paths:
     x-swagger-router-controller: points
     get:
       description: Get feature by point coordinates.
+      operationId: getFeatureByPoint
       parameters:
         - name: latitude
           in: query
           description: Latitude component of point.
           required: true
-          type: number
+          type: integer
         - name: longitude
           in: query
           description: Longitude component of point.
           required: true
-          type: number
+          type: integer
         - name: altitude
           in: query
           description: Altitude component of point.
           required: true
-          type: number
+          type: integer
       consumes:
         - application/json
       produces:
@@ -56,8 +57,9 @@ paths:
             $ref: "#/definitions/Error"
     post:
       description: Add new feature object.
+      operationId: createFeature
       parameters:
-        - name: geometry
+        - name: feature
           in: body
           schema:
             $ref: "#/definitions/Feature"
@@ -77,8 +79,69 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/Error"
+  /points/{id}/:
+    x-swagger-router-controller: points
+    get:
+      description: Get feature by id.
+      operationId: getFeatureById
+      parameters:
+        - name: id
+          type: integer
+          in: path
+          required: true
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      tags:
+        - Points
+      responses:
+        200:
+          description: Success
+          schema:
+            $ref: "#/definitions/Feature"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/Error"
+    put:
+      description: Update feature by id.
+      operationId: updateFeature
+      parameters:
+        - name: id
+          type: integer
+          in: path
+          required: true
+        - name: feature
+          in: body
+          schema:
+            $ref: "#/definitions/Feature"
+          required: true
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      tags:
+        - Points
+      responses:
+        200:
+          description: Success
+          schema:
+            $ref: "#/definitions/Feature"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/Error"
     delete:
       description: Delete feature by id
+      operationId: delFeature
+      tags:
+        - Points
+      parameters:
+        - name: id
+          type: integer
+          in: path
+          required: true
       responses:
         200:
           description: OK
@@ -88,30 +151,27 @@ paths:
             $ref: "#/definitions/Error"
     
   /locations:
+    x-swagger-router-controller: locations
     get:
-      x-swagger-router-controller: locations
-      description: Returns all available features in box area
+      description: Returns all available features in box area or returns all features if box parameters not defined (test mode).
+      operationId: getAll
       parameters:
         - name: b_top
           in: query
           description: Top point of box.
-          required: true
-          type: number
+          type: integer
         - name: b_left
           in: query
           description: Left point of box.
-          required: true
-          type: number
+          type: integer
         - name: b_right
           in: query
           description: Right point of box.
-          required: true
-          type: number
+          type: integer
         - name: b_bottom
           in: query
           description: Bottom point of box.
-          required: true
-          type: number
+          type: integer
       consumes:
         - application/json
       produces:
@@ -158,17 +218,19 @@ definitions:
         default: Feature
       bbox:
         type: array
-        items: {
-          type: integer,
-          format: int32
-        }
+        items: {}
         description: http://geojson.org/geojson-spec.html#bounding-boxes
       geometry:
         $ref: "#/definitions/Geometry"
       properties:
-        type: array
-        items: {}
-        description: also here would be a feature id.
+        type: object
+        properties:
+          id:
+            type: integer
+            description: this is a geometry id in database.
+          name:
+            type: string
+            description: name of this geometry in database.
   Geometry:
     type: object
     required:
@@ -190,11 +252,8 @@ definitions:
         description: "[GeoJSON geometries] (http://geojson.org/geojson-spec.html#geometry-objects)"
       coordinates:
         type: array
-        items: {
-          type: integer,
-          format: int32
-        }
-        description: x, y, z coordinates of geometry object
+        items: {}
+        description: x, y, z coordinates in array of geometry object. I can't describe all possible variations, so look at GeoJson docs.
   Error:
     type: object
     properties:
